# picow-smbus

./: CMakeLists.txt  README.md  lwip_import.cmake
firmware/: commands.h  handlers.c  handlers.h  main.c
include/: smbus_slave.h
include/smbus/: smbus_slave.h
lib/: smbus_slave.c
src/: main.c  smbus_slave.c  smbus_slave.h
